# memory-agent

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  TESTING.md  docker-compose.yml  pyproject.toml
fixtures/scenarios/: 01_basic_facts.json  02_contradiction.json  03_multi_hop.json  04_opinion_evolution.json  05_noise_resistance.json
scripts/: debug_floor.py  debug_multihop.py  run_eval.py  test_multi_valued.py
src/memory_service/: __init__.py  config.py  deps.py  main.py
src/memory_service/adapters/api/: _common.py  errors.py  router.py
src/memory_service/adapters/api/admin/: __init__.py  routes.py
src/memory_service/adapters/api/health/: __init__.py  routes.py  schemas.py
src/memory_service/adapters/api/memories/: __init__.py  routes.py  schemas.py
src/memory_service/adapters/embeddings/: openai_embed.py
src/memory_service/adapters/llm/: openai_llm.py  prompts.py  regex_llm.py
src/memory_service/adapters/storage/: db.py  memories_repo.py  schema.sql  sqlite_vec.py  turns_repo.py
src/memory_service/api/: errors.py  health.py  memories.py  recall.py  router.py  schemas.py  search.py  turns.py
src/memory_service/core/: auth.py  logging.py  retry.py
src/memory_service/domain/: assembler.py  extraction.py  models.py  ports.py  recall.py  reconciliation.py  service.py  tokens.py
tests/: conftest.py
tests/eval/: test_recall_quality.py
tests/integration/: test_concurrent.py  test_contract.py  test_malformed.py  test_persistence.py  test_reconciliation.py
tests/unit/: test_assembler.py  test_rrf.py
(+9 files in other folders)
